<resources>
    <string name="app_name">News App</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="username">UserName</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account ?</string>
    <string name="register">Register</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_user">New User !</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="london_cryptocurrencies_have_no_intrinsic_value_and_people_who_invest_in_them_should_be_prepared_to_lose_all_their_money_bank_of_england_governor_andrew_bailey_said_digital_currencies_like_bitcoin_ether_and_even_dogecoin_have_been_on_a_tear_this_year_reminding_some_investors_of_the_2017_crypto_bubble_in_which_bitcoin_blasted_toward_20_000_only_to_sink_as_low_as_3_122_a_year_later_asked_at_a_press_conference_thursday_about_the_rising_value_of_cryptocurrencies_bailey_said_they_have_no_intrinsic_value_that_doesn_t_mean_to_say_people_don_t_put_value_on_them_because_they_can_have_extrinsic_value_but_they_have_no_intrinsic_value">LONDON — Cryptocurrencies “have no intrinsic value” and people who invest in them should be prepared to lose all their money, Bank of England Governor Andrew Bailey said. Digital currencies like bitcoin, ether and even dogecoin have been on a tear this year, reminding some investors of the 2017 crypto bubble in which bitcoin blasted toward $20,000, only to sink as low as $3,122 a year later. Asked at a press conference Thursday about the rising value of cryptocurrencies, Bailey said: “They have no intrinsic value. That doesn’t mean to say people don’t put value on them, because they can have extrinsic value. But they have no intrinsic value.”</string>
    <string name="cryptocurrencies_have_no_intrinsic_value_and_people_who_invest_in_them_should_be_prepared_to_lose_all_their_money_bank_of_england_governor_andrew_bailey_said">Cryptocurrencies “have no intrinsic value” and people who invest in them should be prepared to lose all their money, Bank of England Governor Andrew Bailey said.</string>
    <string name="sunday_9_may_2021">Sunday, 9 May 2021</string>
    <string name="breaking_news">Breaking News</string>
    <string name="by_ryan_browne">by Ryan Browne</string>
    <string name="i_m_going_to_say_this_very_bluntly_again_he_added_buy_them_only_if_you_re_prepared_to_lose_all_your_money">“I’m going to say this very bluntly again,” he added. “Buy them only if you’re prepared to lose all your money.”</string>
    <string name="top_news">Top News</string>
    <string name="_5_things_to_know_about_the_conundrum_of_lupus">5 things to know about the \'conundrum\' of lupus</string>
    <string name="crypto_investor_should_be_prepared_to_lose_all_their_money_boe_governor_says">Crypto investor should be prepared to lose all their money, Boe governor says</string>
    <string name="see_all">See All</string>
    <string name="category">Category</string>
    <string name="language">Language</string>
    <string name="country">Country</string>
</resources>