<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    tools:context=".fragments.LoginFragment">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="bottom"
            android:background="@drawable/login_bottom_bg"
            android:orientation="vertical"
            android:padding="@dimen/dimen20">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/username" />

            <EditText
                android:id="@+id/et_user_name"
                style="@style/CommonEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="text" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20"
                android:text="@string/password" />

            <EditText
                android:id="@+id/et_password"
                style="@style/CommonEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"

                android:drawableEnd="@drawable/ic_eye"
                android:inputType="textPassword" />

            <Button
                android:id="@+id/btn_sign_in"
                style="@style/CommonButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen20"
                android:text="@string/sign_in" />


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dimen50"
                android:gravity="center">

                <TextView
                    style="@style/TextView.size14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/don_t_have_an_account" />

                <TextView
                    android:id="@+id/tv_register"
                    style="@style/ButtonTextView.size14"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen10"
                    android:text="@string/register" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

</FrameLayout>