<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.DetailsFragment">

    <ImageButton
        android:id="@+id/ib_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@drawable/back_btn_bg"
        android:paddingBottom="@dimen/dimen5"
        android:paddingTop="@dimen/dimen5"
        android:paddingStart="@dimen/dimen10"
        android:layout_margin="@dimen/dimen10"
        android:src="@drawable/ic_arrow_back"
        android:translationZ="@dimen/dimen2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="RtlSymmetry" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:scaleType="centerCrop"
                android:src="@drawable/ic_sample"
                app:layout_constraintDimensionRatio="1:1"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_blur_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/dimen30"
                android:layout_marginEnd="@dimen/dimen30"
                android:orientation="vertical"
                android:background="@drawable/blur_view_bg"
                android:translationZ="@dimen/dimen10"
                app:layout_constraintBottom_toTopOf="@+id/view"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen20"
                    android:layout_marginTop="@dimen/dimen20"
                    android:layout_marginEnd="@dimen/dimen20"
                    android:text="@string/sunday_9_may_2021" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen20"
                    android:layout_marginTop="@dimen/dimen10"
                    android:layout_marginEnd="@dimen/dimen20"
                    android:text="@string/cryptocurrencies_have_no_intrinsic_value_and_people_who_invest_in_them_should_be_prepared_to_lose_all_their_money_bank_of_england_governor_andrew_bailey_said" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/dimen20"
                    android:layout_marginTop="@dimen/dimen10"
                    android:layout_marginBottom="@dimen/dimen20"
                    android:text="Sunday, 9 May 2021" />

            </LinearLayout>

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginTop="-20dp"
                android:background="@drawable/login_bottom_bg"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />


            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/dimen20"
                android:text="@string/london_cryptocurrencies_have_no_intrinsic_value_and_people_who_invest_in_them_should_be_prepared_to_lose_all_their_money_bank_of_england_governor_andrew_bailey_said_digital_currencies_like_bitcoin_ether_and_even_dogecoin_have_been_on_a_tear_this_year_reminding_some_investors_of_the_2017_crypto_bubble_in_which_bitcoin_blasted_toward_20_000_only_to_sink_as_low_as_3_122_a_year_later_asked_at_a_press_conference_thursday_about_the_rising_value_of_cryptocurrencies_bailey_said_they_have_no_intrinsic_value_that_doesn_t_mean_to_say_people_don_t_put_value_on_them_because_they_can_have_extrinsic_value_but_they_have_no_intrinsic_value"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/ll_blur_view" />

            </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>




</androidx.constraintlayout.widget.ConstraintLayout>